--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@ node_modules
 coverage
 coverage.json
 typechain
+.eslintignore
+.env.example
+.gitignore
+.npmignore
+.prettierignore
+.solhintignore
+
 
 #Hardhat files
 cache
